Refactor RoomService and UserService; add validation for IDs, enhance transaction management, and improve exception handling. Update tests to reflect changes in exception types and enhance readability.