@@ -10,8 +10,10 @@ import com.github.alefthallys.roombooking.models.User;
 import com.github.alefthallys.roombooking.repositories.UserRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -27,55 +29,61 @@ public class UserService {
 		this.authService = authService;
 	}
 	
+	private static void validateIdOrThrowException(Long id) {
+		if (id == null || id <= 0) {
+			throw new IllegalArgumentException("Invalid user ID: " + id);
+		}
+	}
+	
+	@Transactional(readOnly = true)
 	public List<UserResponseDTO> findAll() {
-		return userRepository.findAll().stream()
+		return userRepository.findAll()
+				.stream()
 				.map(UserMapper::toDto)
-				.toList();
+				.collect(Collectors.toList());
 	}
 	
+	@Transactional(readOnly = true)
 	public UserResponseDTO findById(Long id) {
-		User userById = userRepository.findById(id).orElseThrow(() -> new EntityUserNotFoundException(id));
-		return UserMapper.toDto(userById);
+		validateIdOrThrowException(id);
+		return userRepository.findById(id)
+				.map(UserMapper::toDto)
+				.orElseThrow(() -> new EntityUserNotFoundException(id));
 	}
 	
-	public UserResponseDTO create(UserRequestDTO userDTO) {
-		if (userRepository.existsByEmail((userDTO.email()))) {
-			throw new EntityUserAlreadyExistsException(userDTO.email());
+	@Transactional
+	public UserResponseDTO create(UserRequestDTO userRequestDTO) {
+		if (userRepository.existsByEmail(userRequestDTO.email())) {
+			throw new EntityUserAlreadyExistsException(userRequestDTO.email());
 		}
-		
-		User userToSave = UserMapper.toEntity(userDTO);
-		userToSave.setPassword(passwordEncoder.encode(userToSave.getPassword()));
-		
-		return UserMapper.toDto(userRepository.save(userToSave));
+		User user = UserMapper.toEntity(userRequestDTO);
+		user.setPassword(passwordEncoder.encode(userRequestDTO.password()));
+		user = userRepository.save(user);
+		return UserMapper.toDto(user);
 	}
 	
-	public UserResponseDTO update(Long id, UserUpdateRequestDTO userDTO) {
-		User userById = userRepository.findById(id).orElseThrow(
-				() -> new EntityUserNotFoundException(id));
+	@Transactional
+	public UserResponseDTO update(Long id, UserUpdateRequestDTO userUpdateRequestDTO) {
+		validateIdOrThrowException(id);
+		User user = userRepository.findById(id)
+				.orElseThrow(() -> new EntityUserNotFoundException(id));
 		
-		authService.validateUserOwnership(userById);
+		authService.validateUserOwnership(user);
 		
-		if (!userDTO.name().isBlank()) {
-			userById.setName(userDTO.name());
-		}
+		user.setName(userUpdateRequestDTO.name());
+		user.setPhone(userUpdateRequestDTO.phone());
+		user.setPassword(passwordEncoder.encode(userUpdateRequestDTO.password()));
 		
-		if (!userDTO.password().isBlank()) {
-			userById.setPassword(passwordEncoder.encode(userDTO.password()));
-		}
-		
-		if (!userDTO.phone().isBlank()) {
-			userById.setPhone(userDTO.phone());
-		}
-		
-		User savedUser = userRepository.save(userById);
-		return UserMapper.toDto(savedUser);
+		user = userRepository.save(user);
+		return UserMapper.toDto(user);
 	}
 	
+	@Transactional
 	public void delete(Long id) {
-		User userById = userRepository.findById(id).orElseThrow(
-				() -> new EntityUserNotFoundException(id));
-		
-		authService.validateUserOwnership(userById);
-		userRepository.delete(userById);
+		validateIdOrThrowException(id);
+		User user = userRepository.findById(id)
+				.orElseThrow(() -> new EntityUserNotFoundException(id));
+		authService.validateUserOwnership(user);
+		userRepository.delete(user);
 	}
 }
